--- a/csv to json converter.ipynb
+++ b/csv to json converter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -168,7 +168,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a[['opp_pass_yd','opp_rush_yds','pass_yds','rush_yds','takeaways','turnovers','team','season']].set_index('team').to_csv('a.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1257,7 +1266,7 @@
        "[957 rows x 12 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
